--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>El titulo del Post</title>
+<title>Bienvenidos a HiperBlog</title>
 <link rel="stylesheet" href="Css/Estilos.css"/>
 </head>
 <body>
